--- a/index.html
+++ b/index.html
@@ -1,44 +1,21 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Flipbook Portfolio</title>
+  <title>My Portfolio PDF</title>
   <style>
     body {
-      background: #f9f9f9;
       margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      background: #f5f5f5;
     }
-    #flipbook {
-      width: 800px;
-      height: 500px;
-    }
-    #flipbook .page {
+    iframe {
       width: 100%;
-      height: 100%;
-      background: white;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+      height: 100vh;
+      border: none;
     }
   </style>
 </head>
 <body>
-  <div id="flipbook">
-    <div class="page"><embed src="sample.pdf#page=1" width="100%" height="100%"></div>
-    <div class="page"><embed src="sample.pdf#page=2" width="100%" height="100%"></div>
-    <!-- Add more pages as needed -->
-  </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/turn.js@4/turn.min.js"></script>
-  <script>
-    $('#flipbook').turn({
-      width: 800,
-      height: 500,
-      autoCenter: true
-    });
-  </script>
+  <iframe src="sample.pdf" title="Portfolio PDF"></iframe>
 </body>
 </html>
